load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")

#deprecated
container_image(
    name = "pact_verifier_cli",
    base = "@debian_base//image",
    directory = "/bin",
    files = ["//pact-helper:pact_verifier_cli_linux_x86_64"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "tar",
    srcs = ["//pact-helper:pact_verifier_cli_linux_x86_64", "@pact_plugins//:pact-plugin", "//pact-helper:pact_protobuf_plugin_bin_linux_x86_64"],
)

oci_image(
    name = "oci_pact_verifier_cli_with_grpc_plugin_image",
    base = "@distroless_debian",
    env = { "PACT_PLUGIN_DIR": "/"},
    tars = [":tar"],
    visibility = ["//visibility:public"],
)

oci_tarball(
    name = "tarball",
    image = ":oci_pact_verifier_cli_with_grpc_plugin_image",
    repo_tags = ["pact_verifier_cli_with_grpc_plugin:latest"],
)

#deprecated~
container_image(
    name = "pact_verifier_cli_with_grpc_plugin_image",
    base = ":pact_verifier_cli",
    directory = "/plugins",
    files = [
        "//pact-helper:pact_protobuf_plugin_bin_linux_x86_64",
        "@pact_plugins//:pact-plugin",
    ],
    symlinks = {
        "/root/.pact/plugins/protobuf-0.3.1/pact-plugin.json": "/plugins/pact-plugin.json",
        "/root/.pact/plugins/protobuf-0.3.1/pact-protobuf-plugin": "/plugins/pact_protobuf_plugin_bin",
    },
    visibility = ["//visibility:public"],
)
