load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")

pkg_tar(
    name = "tar_pact_verifier_cli",
    srcs = [
        "//pact-helper:pact_verifier_cli_linux_x86_64",
    ],
)

pkg_tar(
    name = "tar_protobuf",
    srcs = [
        "//pact-helper:pact_protobuf_plugin_bin_linux_x86_64",
        "@pact_plugins//:pact-plugin",
    ],
    symlinks = {
        "/root/.pact/plugins/protobuf-0.3.1/pact-plugin.json": "/pact-plugin.json",
        "/root/.pact/plugins/protobuf-0.3.1/pact-protobuf-plugin": "/pact_protobuf_plugin_bin",
    },
)

oci_image(
    name = "oci_pact_verifier_cli_with_grpc_plugin_image",
    base = "@distroless_debian",
    tars = [
        ":tar_pact_verifier_cli",
        ":tar_protobuf",
    ],
    visibility = ["//visibility:public"],
)

oci_tarball(
    name = "tarball",
    image = ":oci_pact_verifier_cli_with_grpc_plugin_image",
    repo_tags = ["pact_verifier_cli_with_grpc_plugin:latest"],
)
