load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go",
    srcs = [
        "pact_plugins_helper.go",
        "utils.go",
    ],
    importpath = "github.com/opicaud/monorepo/pact-helper/go",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pact_foundation_pact_go_v2//message/v4:message",
        "@com_github_stretchr_testify//assert",
        "@io_bazel_rules_go//go/runfiles:go_default_library",
    ],
)
