load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "eventstore",
    srcs = [
        "events.go",
        "eventstore.go",
        "standard_events_emitter.go",
    ],
    importpath = "github.com/opicaud/monorepo/shape-app/eventstore",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_test(
    name = "eventstore_test",
    srcs = ["eventstore_test.go"],
    embed = [":eventstore"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
    ],
)
